projects/template/template_fastapi_app/kubernetes/istio/istio-system-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    istio-injection: disabled
